--- a/main.html
+++ b/main.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Main</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.24/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <h1>yessssssssssss</h1>
+
+<body class="bg-slate-800">
+    <section class="max-w-md min-h-screen mx-auto py-6 bg-gray-200">
+        <header>
+            <nav>
+                <div class="flex justify-between items-center px-6 py-4">
+                    <div class="flex items-center gap-2">
+                        <img class="w-[50px]" src="./assets/Group.png" alt="">
+                        <div>
+                            <h1 class="text-3xl font-bold">$45000</h1>
+                            <p class="text-gray-600">Available Balance</p>
+                        </div>
+                    </div>
+                    <button class="px-4 py-2 text-gray-500 border border-gray-500 rounded-md">Log Out</button>
+                </div>
+                <hr class="border-t-2 border-gray-300">
+            </nav>
+            <section class="mt-10">
+                <div class="px-6 mb-6 ">
+                    <h1 class="text-2xl font-bold mb-2">🔥 Welcome to Payooo!</h1>
+                    <p class="text-gray-500">Enjoy easy and convenient financial services with us. Cashout charge is low
+                        and </p>
+                </div>
+                <div class="grid grid-cols-3 gap-3 px-5">
+                    <div class="border-[1px] border-gray-400 space-y-3 cursor-pointer py-5 text-center rounded-lg">
+                        <img class="w-6 mx-auto" src="./assets/wallet1.png" alt="">
+                        <h2 class="text-[14px] text-gray-500 font-medium">Add money</h2>
+                    </div>
+                    <div class="border-[1px] border-gray-400 space-y-3 cursor-pointer py-5 text-center rounded-lg">
+                        <img class="w-6 mx-auto" src="./assets/send1.png" alt="">
+                        <h2 class="text-[14px] text-gray-500 font-medium">Cashout</h2>
+                    </div>
+                    <div class="border-[1px] border-gray-400 space-y-3 cursor-pointer py-5 text-center rounded-lg">
+                        <img class="w-6 mx-auto" src="./assets/money1.png" alt="">
+                        <h2 class="text-[14px] text-gray-500 font-medium">Transfer Money</h2>
+                    </div>
+                    <div class="border-[1px] border-gray-400 space-y-3 cursor-pointer py-5 text-center rounded-lg">
+                        <img class="w-6 mx-auto" src="./assets/bonus1.png" alt="">
+                        <h2 class="text-[14px] text-gray-500 font-medium">Get Bonus</h2>
+                    </div>
+                    <div class="border-[1px] border-gray-400 space-y-3 cursor-pointer py-5 text-center rounded-lg">
+                        <img class="w-6 mx-auto" src="./assets/purse1.png" alt="">
+                        <h2 class="text-[14px] text-gray-500 font-medium">Pay Bill</h2>
+                    </div>
+                    <div class="border-[1px] border-gray-400 space-y-3 cursor-pointer py-5 text-center rounded-lg">
+                        <img class="w-6 mx-auto" src="./assets/transaction1.png" alt="">
+                        <h2 class="text-[14px] text-gray-500 font-medium">Transactions</h2>
+                    </div>
+                </div>
+            </section>
+        </header>
+    </section>
 </body>
+
 </html>
